--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,12 +20,13 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.4", features = [] }
 reqwest = {version = "0.11", features = ["blocking", "json"] }
 lazy_static = "1.4"
+config = "0.13.3"
 
 
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = [ "custom-protocol" ]
+default = ["custom-protocol"]
 # this feature is used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
