--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri = { version = "1.2.4", features = [] }
 reqwest = {version = "0.11", features = ["blocking", "json"] }
 lazy_static = "1.4"
 config = "0.13.3"
+rand = "0.8.5"
 
 
 [features]
