--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde-wasm-bindgen = "*"
 config = "0.13.3"
 pulldown-cmark = "0.9.2"
 #sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "fc640d313e66f9a6af422fae44f4f72fa86280cc" }
+common = {path = "./common"}
 
 [dependencies.web-sys]
 version = "0.3"
@@ -30,4 +31,4 @@ features = [
 
 
 [workspace]
-members = ["src-tauri"]
+members = ["common", "src-tauri"]
