--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ config = "0.13.3"
 pulldown-cmark = "0.9.2"
 #sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "fc640d313e66f9a6af422fae44f4f72fa86280cc" }
 common = {path = "./common"}
+uuid = { version = "1.3.0", features = ["v7", "serde", "wasm-bindgen"] }
+getrandom = { version = "0.2.8", features = ["js"] }
 
 [dependencies.web-sys]
 version = "0.3"
