--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 serde = {version = "1", features = ["derive"]}
 tracing = "0.1"
+uuid = { version = "1.3.0", features = ["v7", "serde", "wasm-bindgen"] }
