--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ uuid = { version = "1.3.0", features = ["v7", "serde", "wasm-bindgen"] }
 getrandom = { version = "0.2.8", features = ["js"] }
 sled = "0.34.7"
 itertools = "0.10.5"
+reqwest-eventsource = "0.4.0"
 
 
 [features]
