--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ pulldown-cmark = "0.9.2"
 common = {path = "./common"}
 uuid = { version = "1.3.0", features = ["v7", "serde", "wasm-bindgen"] }
 getrandom = { version = "0.2.8", features = ["js"] }
+futures = "0.3.27"
 
 [dependencies.web-sys]
 version = "0.3"
@@ -32,7 +33,24 @@ features = [
     "Navigator",
     "console",
     "MouseEvent",
-    "KeyboardEvent"
+    "KeyboardEvent",
+    'AudioContext',
+    'AudioDestinationNode',
+    'AudioNode',
+    'AudioParam',
+    'GainNode',
+    'OscillatorNode',
+    'OscillatorType',
+    "MediaStream",
+    "MediaRecorder",
+    "MediaStreamConstraints",
+    "MediaStreamAudioSourceNode",
+    "MediaDeviceInfo",
+    "MediaDeviceKind",
+    "MediaDevices",
+    "BlobEvent",
+    "Blob",
+    "MediaRecorderOptions",
 ]
 
 
